examples/test/testpolicy14067.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14067
  namespace: namespace197
spec:
  podSelector:
    matchLabels:
      key15: value14
      key8: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value6
          key2: value46
      podSelector:
        matchLabels:
          key31: value38
          key14: value10
